<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"


            >

            <ImageView
                android:id="@+id/image_restaurant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="MissingConstraints" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="13dp"

            >

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/name_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="6dp"
                android:text="@string/direction"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/direction_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/direction_info"
                android:textColor="@color/black"
                android:textSize="13dp"

                />

            <TextView
                android:id="@+id/reference_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_marginVertical="6dp"
                android:text="@string/near"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/vicinity_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/near"
                android:textColor="@color/black"
                android:textSize="13dp"

                />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">


                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_people"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="13dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/rounded_icons"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/people"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:text="@string/number"
                        android:textColor="@color/black"
                        android:textSize="17dp"

                        />

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:layout_marginBottom="6dp"
                    android:gravity="center"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:id="@+id/image_views"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="13dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/rounded_icons"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ranking"
                        app:tint="@color/white" />


                    <TextView
                        android:id="@+id/ranking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:text="@string/number"
                        android:textColor="@color/black"
                        android:textSize="17dp"

                        />


                </LinearLayout>


            </LinearLayout>




        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>