<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:background="@drawable/rounded_courner"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"

        >

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="2dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="17dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="13dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rounded_icons"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/people"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="17dp"

                    />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:orientation="horizontal"

                >

                <ImageView
                    android:id="@+id/image_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="13dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/rounded_icons"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ranking"
                    app:tint="@color/white" />


                <TextView
                    android:id="@+id/ranking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="3dp"
                    android:text="@string/number"
                    android:textColor="@color/black"
                    android:textSize="17dp"

                    />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="horizontal"
        android:padding="10dp"

        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="6dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/image_seemore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_see_more"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/see_more"
            app:tint="@color/white"
            android:foreground="@drawable/image_button_selector"
        />


        <TextView
            android:id="@+id/seemore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:text="@string/see_more"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:textAlignment="center"
            android:textStyle="italic"

            />

    </LinearLayout>


</LinearLayout>
